# recycle_ai

./: .gitignore  Makefile  README.md  pyproject.toml  shell.nix
dataset/3_bottle_training/: data.yaml  labels.cache
dataset/3_bottle_training/labels/: WIN_20240814_11_53_38_Pro_jpg.rf.12509540a6c41bfbb253ee5ab546794a.txt  WIN_20240814_11_53_38_Pro_jpg.rf.6dbddcb8913d59e48f78cb6e67b85515.txt  WIN_20240814_11_53_38_Pro_jpg.rf.7820959a41945fc93f7329e63a0aa8ce.txt  WIN_20240814_11_53_38_Pro_jpg.rf.84f6546dfe06c74e8b4d827c6905f1bd.txt  WIN_20240814_11_53_38_Pro_jpg.rf.8518e4d62e956d304a6c93d271a10b85.txt  WIN_20240814_11_53_38_Pro_jpg.rf.b1e51919965d8578f504aeef355e446a.txt  WIN_20240814_11_53_38_Pro_jpg.rf.daac0f667ad852cda1e259e984efbabb.txt  WIN_20240814_11_53_38_Pro_jpg.rf.fb40889cee905c4feec20626208a4866.txt  WIN_20240814_11_53_38_Pro_jpg.rf.fbc34f4cf9605276d93ae308b965c413.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.17a04e420b5aa91267f391023139f6c0.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.44dbbd5de5d60d76795ec8ffa7101043.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.5813c9f877d7a9b63da4cd5b2668a6dd.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.596924fd6ae3c42163bd09cbd10d3e90.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.94baae7216620a17db83171a5c535cce.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.ca66ed593a8963bbdfd433793e7b0dba.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.e3b54848353e4cfe5b13add6c8a8dbac.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.ee053464c502e5ff0d03c8c7e4c48a0f.txt  WIN_20240814_11_54_30_Pro-2-_jpg.rf.ff672b8266ea3b5f8a23c2dcaf6b7240.txt  (+450 more)
