[tool.poetry]
name = "trash identification ai"
package-mode = false
version = "0.1.0"
description = "AI trainer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = "^8.2.82"
#yolov10 = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
