[tool.poetry]
name = "trash identification ai"
package-mode = false
version = "0.1.0"
description = "AI trainer"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ultralytics = { git = "https://github.com/THU-MIG/yolov10.git", rev = "cd2f79c" }
huggingface-hub = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
